2006-01-03  Daniel Kobras  <kobras@debian.org>

	* magick/attribute.c (GenerateEXIFAttribute): Fix EXIF IFD stack
	overflow vulnerability.
	* configure.ac: Fix typo in HTMLDecodeDelegate.

2005-10-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh (PACKAGE_VERSION): Released version 1.1.7.

2005-10-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c (ReadSVGImage): Eliminate memory leak.

2005-09-18  Michal Kowalczuk  <sammael@brzydal.eu.org>

	* coders/gif.c: Free global_colormap before returning with error.

2005-09-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.h: DispatchImage and PopImagePixels were not
	properly DLL imported by the headers.

2005-07-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Updated libpng to version 1.2.8.
	* coders/ept.c (WriteEPTImage): MSVC does not support a
	'long long' type.

2005-07-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c: Change how Jasper is intialized.  Hopefully
	eliminate memory leak when reading ICC color profile.
	* magick/utility.c (SystemCommand): Always report command error
	information if a command fails.
	* Fix some compilation warnings produced by a 64-bit build.

2005-07-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* zlib: Updated to version 1.2.3.

2005-07-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (DisplayImages): Don't invoke
	XrmDestroyDatabase() to destroy the resource database associated
	with the display since it seems that XCloseDisplay() does this for
	us and the X.org server doesn't properly keep track of the
	resource allocation.
	* magick/command.c (DisplayImageCommand): Ditto for
	XrmDestroyDatabase().

2005-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (readdir): Fix write beyond buffer length
	reported in SourceForge issue #1182003.  Only impacts Windows.

2005-05-16  Tavis Ormandy <taviso@gentoo.org>
