@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2006-01-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/constitute.c (ReadImage): Avoid crash if delegate fails
+        to return image.
+
+</UL>
+<p>
 2006-01-03  Daniel Kobras  &lt;kobras@debian.org&gt;
 
 <UL>
